    - Added support for explicitly passing a name when creating Value() nodes. This may be useful
      when the value can't be converted to a string or if having a name is otherwise desirable.
    - Fixed usage of abspath and path for RootDir objects on Windows. Previously
      env.fs.Dir("T:").abspath would return "T:\T:" and now it correctly returns "T:".

  From Ivan Kravets, PlatformIO
    - New conditional C Scanner (`SCons.Scanner.C.CConditionalScanner()`)
      which interprets C/C Preprocessor conditional syntax (#ifdef, #if, #else,
      #elif, #define, etc.)
    - Improvements for virtual C Pre-Processor:
      * Handle UNSIGNED LONG and LONG numeric constants in DEC (keep support for HEX)
      * Skip unrecognized directives, such as `#if( defined ...)`
      * Ignore `#include DYNAMIC_INCLUDE` directive that depends on a dynamic
        macro which is not located in a state TABLE.
      * Cleanup CPP expressions before evaluating (strip comments, carriage returns)

  From Iosif Kurazs:
    - Added a new flag called "linedraw" for the command line argument  "--tree"
      that instructs scons to use single line drawing characters to draw the dependency tree.

  From Daniel Moody:
    - Add no_progress (-Q) option as a set-able option. However, setting it in the
      SConstruct/SConscript will still cause "scons: Reading SConscript files ..." to be
      printed, since the option is not set when the build scripts first get read.
    - Added check for SONAME in environment to setup symlinks correctly (Github Issue #3246)
    - User callable's called during substition expansion could possibly throw a TypeError
      exception, however SCons was using TypeError to detect if the callable had a different
      signature than expected, and would silently fail to report user's exceptions. Fixed to
      use signature module to detect function signature instead of TypeError. (Github Issue #3654)